--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "svelte-preprocess": "^3.5.0"
   },
   "dependencies": {
+    "pg": "^8.0.3",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.6",
     "sirv-cli": "^0.4.4"
   }
 }
