--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0",
+    "svelte-dnd-action": "^0.2.5",
     "svelte-preprocess": "^3.5.0"
   },
   "dependencies": {
